--- a/index.html
+++ b/index.html
@@ -46,4 +46,6 @@ bodyClass: home
 	{% endfor %}
 </ul>
 
-</html>
+<footer class="site-footer">
+	<p> All rights reserved 2019 © Oliver Boulton.</p>
+</footer>
