--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@ bodyClass: home
 			<h2>{{post.data.title}}. {{post.data.subtitle}}</h2>
 		</a>
 		{% set first = post.data["featured-images"] | first%}
-		<div class="post-images randomImage"><img class='post-list-image' style="max-width: {{first.width}}%" src="/assets/letter-like/OLIVER_BOULTON_LETTER_LIKE_2.jpg" alt=""></div>
+		<div class="post-images randomImage"><img class='post-list-image' style="max-width: {{first.width}}%"
+				src="/assets/letter-like/OLIVER_BOULTON_LETTER_LIKE_2.jpg" alt=""></div>
 	</li>
 	{% else %}
-	<li class='post' data-book={{post.data.isBook}}>
+	<li class='post' data-permalink="{{post.data.permalink}}" data-book={{post.data.isBook}}>
 		<div class="anchor" id='{{post.data.title | urlencode }}'></div>
 		{% if post.data.file %}
 		<a class='post-title button' href='{{post.data.file}}'>
 			<h2>{{post.data.title}}. {{post.data.subtitle}}</h2>
 		</a>
 		{% else %}
-		<a class='post-title button' {% if post.data.permalink != false %}href='{{post.url}}'{% endif %}>
+		<a class='post-title button' {% if post.data.permalink != false %}href='{{post.url}}' {% endif %}>
 			<h2>{{post.data.title}}. {{post.data.subtitle}}</h2>
 		</a>
 		{% endif %}
@@ -36,7 +37,8 @@ bodyClass: home
 			<a class="post-list-image" style="max-width: {{image.width}}%" href="{{post.data.file}}"><img
 					src="/assets/images/{{image.url}}" alt="" /></a>
 			{% else %}
-			<a class="post-list-image" style="max-width: {{image.width}}%" {% if post.data.permalink != false %}href="{{post.url}}"{% endif %}><img
+			<a class="post-list-image" style="max-width: {{image.width}}%"
+				{% if post.data.permalink != false %}href="{{post.url}}" {% endif %}><img
 					src="/assets/images/{{image.url}}" alt="" /></a>
 			{% endif %}
 			{% endfor %}
