Only fix randomLink on homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ bodyClass: home
 <header class="site-header">
 	<a class="active" href="mailto:studio@oliverboulton.com">Oliver Boulton (1991, UK)</a>
 </header>
-<a class='randomLink' href='#'>ξ</a></li>
+<a class='randomLink fixed' href='#'>ξ</a></li>
 
 <ul class="posts">
 	{% for post in collections.project | reverse %}
