--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ bodyClass: home
 		</a>
 		{% set first = post.data["featured-images"] | first%}
 		<div class="post-images randomImage"><img class='post-list-image' style="max-width: {{first.width}}%"
-				src="/assets/letter-like/OLIVER_BOULTON_LETTER_LIKE_2.jpg" alt=""></div>
+				src="/assets/letter-like/OLIVER_BOULTON_LETTER_LIKE_2.png" alt=""></div>
 	</li>
 	{% else %}
 	<li class='post' data-permalink="{{post.data.permalink}}" data-book={{post.data.isBook}}>
