--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@ bodyClass: home
 			{% for image in post.data["featured-images"] %}
 			{% if post.data.file %}
 			<a class="post-list-image" style="max-width: {{image.width}}%" href="{{post.data.file}}">
-				{% image src=image.url %}
+				{% image src=image.url alt=post.data.title %}
 			</a>
 			{% else %}
 			<a class="post-list-image" style="max-width: {{image.width}}%"
 				{% if post.data.permalink != false %}href="{{post.url}}" {% endif %}>
-				{% image src=image.url %}
+				{% image src=image.url alt=post.data.title %}
 			</a>
 			{% endif %}
 			{% endfor %}
